--- a/Call_apply_bind.html
+++ b/Call_apply_bind.html
@@ -31,8 +31,8 @@
         printName.call(obj1);
 
         printName.apply(obj2);
-        
-        let x = printName.bind(obj1);
+
+        let x = printName.bind(obj1); //reference
         x();
     </script>
 </body>
